tests/invalid/annotation_tuple_unit_element/main.py
def main() -> None:
    x: tuple[None] = (None,)
